# mlc

./: LICENSE  README.md  environment_unix.yml  pyproject.toml
.github/workflows/: CI.yml
examples/ad/: example.py  example1.py  example2.py
examples/mnist/: README.md  environment_pt.yml  environment_tf.yml  inference.py  inference2_np.py  inference_np.py  inference_np_batch.py  mnist-pt-convert.py  mnist-pt.py  mnist-tf.py  mnist2-tf.py
mlc_clib/: CMakeLists.txt  README.md  display.c  display.h  generate.py  generate2.py  generate_f16.py  gguf.c  gguf.h  inference-generated.c  inference-generated.h  kernels.c  kernels.h  ll_to_cpu.py  llir.py  main.c  main2.c
src/mlc/: hl_to_dot.py  hlir.py  main.py  model.py  nn_to_hl.py  nnir.py
tests/: test_beatiful_mnist.specs.txt  test_mlc.output.txt  test_mlc.py  test_pytorch.py
